tests/ui/associated-type-bounds/conflicting-bounds-different-generics-simple.stderr
error: conflicting associated type bindings for `Assoc`
  --> $DIR/conflicting-bounds-different-generics-simple.rs:24:24
   |
LL |     require_trait::<D, dyn Sub<D>>();
   |                        ^^^^^^^^^^
   |
   = note: `Assoc` is specified to be `i64`
   = note: `Assoc` is also specified to be `i32`

error: aborting due to 1 previous error

